--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -8,13 +8,13 @@ import TwinklingStars from "@components/TwinklingStars.astro"
 import MeteorShower from "@components/MeteorShower.astro"
 
 const posts = (await getCollection("blog"))
-  .filter(post => !post.data.draft)
-  .sort((a, b) => b.data.date.getTime() - a.data.date.getTime())
+  .filter((post: any) => !post.data.draft)
+  .sort((a:any, b:any) => b.data.date.getTime() - a.data.date.getTime())
   .slice(0,3)
 
 const projects = (await getCollection("projects"))
-  .filter(project => !project.data.draft)
-  .sort((a, b) => b.data.date.getTime() - a.data.date.getTime())
+  .filter((project:any) => !project.data.draft)
+  .sort((a:any, b:any) => b.data.date.getTime() - a.data.date.getTime())
   .slice(0,3)
 
 const stack = [
@@ -83,10 +83,10 @@ const stack = [
             Hello, I am ...
           </p>
           <p class='animated text-2xl md:text-3xl lg:text-4xl font-bold uppercase text-black dark:text-white'>
-            Astro Sphere
+            Andrés Castillo
           </p>
           <p class='animated text-sm md:text-base lg:text-lg opacity-75'>
-            Currently designing products for humans.
+            Frontend Developer | Student | Cat Lover 🌟
           </p>
           <div id="ctaButtons" class='animated flex flex-wrap gap-4 justify-center mt-5'>
             <a href='/blog' class='py-2 px-4 rounded truncate text-xs md:text-sm lg:text-base bg-black dark:bg-white text-white dark:text-black hover:opacity-75 blend'>
@@ -104,15 +104,14 @@ const stack = [
   <div class="relative bg-white dark:bg-black">
     <div class="mx-auto max-w-screen-sm p-5 space-y-24 pb-16">
 
-      <!-- About Section -->
+      <!-- About Section --> 
       <section class="animate">
         <article>
-          <p>I am a <b><i>software engineer</i></b>, <b><i>ui/ux designer</i></b>, <b><i>product planner</i></b>, <b><i>mentor</i></b>, <b><i>student</i></b>, <b><i>minimalist</i></b>, <b><i>eternal optimist</i></b>, <b><i>crypto enthusiast</i></b> and <b><i>sarcasm connoisseur</i></b>.</p>
-          <p>I love to both build and break things. I am motivated by challenging projects with self-guided research and dynamic problem solving. My true passion is crafting creative front end designs with unique takes on color, typography and motion.</p>
+          <p>With over 3 years of experience building applications, I am a <b><i>developer</i></b>, <b><i>designer</i></b>, and <b><i>problem-solver</i></b>. Currently, I'm studying at TECNM Celaya, while taking various courses and developing a wide range of applications.</p>
           <p>During my career</p>
-          <p>I have built products ranging from marketing and ecommerce websites to complex enterprise apps with focus on delivering fast, elegant code along with delightful user interfaces.</p>
+          <p>I love to both build and refine projects. I am driven by challenging endeavors that require self-directed research and creative problem-solving. My passion lies in crafting engaging front-end designs, blending color, typography, and dynamic motion for unique user experiences.</p>
           <p>Now</p>
-          <p>I currently work as a software engineer at StreamlineFS, where I do product planning, design and development.</p>
+          <p>Throughout my journey, I have worked on everything from innovative web designs to complex applications, with a focus on creating elegant, efficient solutions and delivering captivating user interfaces.</p>
         </article>
       </section>
 
@@ -130,7 +129,7 @@ const stack = [
             </a>
           </div>
           <ul class="space-y-4">
-            {posts.map((post) => (
+            {posts.map((post :any) => (
               <li>
                 <ArrowCard entry={post} />
               </li>
@@ -154,14 +153,6 @@ const stack = [
               />
             ))}
           </div>
-          <div>
-            Performing reactivity and statefulness, special guest
-            <a href="https://www.solidjs.com/" target="_blank" class="w-fit group underline decoration-[.5px] decoration-black/25 dark:decoration-white/50 hover:decoration-black dark:hover:decoration-white text-black dark:text-white underline-offset-2 blend">
-              <span class="text-black/75 dark:text-white/75 group-hover:text-black group-hover:dark:text-white blend">
-                SolidJS
-              </span>
-            </a>
-          </div>
         </div>
       </section>
 
@@ -179,7 +170,7 @@ const stack = [
             </a>
           </div>
           <ul class="space-y-4">
-            {projects.map((project) => (
+            {projects.map((project : any) => (
               <li>
                 <ArrowCard entry={project} />
               </li>
@@ -192,11 +183,11 @@ const stack = [
       <section class="animate">
         <div>
           <p class="font-semibold text-black dark:text-white">
-            Let's Connect
-          </p>
-          <p>
-            Reach out to me via email or on social media.
-          </p>
+            Stay in Touch 🌟
+        </p>
+        <p>
+          I'd love to hear from you! Feel free to drop me an email or connect on social media ✨.
+        </p>
           <div class="grid grid-cols-4 gap-y-2 mt-4 auto-cols-min">
             {SOCIALS.map(social => (
               <div class="col-span-1 flex items-center gap-1">
