--- a/src/components/BaseHead.astro
+++ b/src/components/BaseHead.astro
@@ -34,7 +34,7 @@ const { title, description, image = "/open-graph.jpg" } = Astro.props
 <meta property="og:url" content={Astro.url} />
 <meta property="og:title" content={title} />
 <meta property="og:description" content={description} />
-<meta property="og:image" content={new URL(image, Astro.url)} />
+<meta property="og:image" content='/open-graph.jpg' />
 
 <!-- Twitter -->
 <meta property="twitter:card" content="summary_large_image" />
