button changed and about-me updated

--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -110,8 +110,8 @@ const stack = [
             Frontend Developer | Student | Cat Lover 🌟
           </p>
           <div id="ctaButtons" class='animated flex flex-wrap gap-4 justify-center mt-5'>
-            <a href='/blog' class='py-2 px-4 rounded truncate text-xs md:text-sm lg:text-base bg-black dark:bg-white text-white dark:text-black hover:opacity-75 blend'>
-              Read my blog
+            <a href='/projects' class='py-2 px-4 rounded truncate text-xs md:text-sm lg:text-base bg-black dark:bg-white text-white dark:text-black hover:opacity-75 blend'>
+              View my projects
             </a>
             <a href='/work' class='py-2 px-4 truncate rounded text-xs md:text-sm lg:text-base border border-black/25 dark:border-white/25 hover:bg-black/5 hover:dark:bg-white/15 blend'>
               View my work
@@ -128,11 +128,11 @@ const stack = [
       <!-- About Section --> 
       <section class="animate">
         <article>
-          <p>With over 3 years of experience building applications, I am a <b><i>developer</i></b>, <b><i>designer</i></b>, and <b><i>problem-solver</i></b>. Currently, I'm studying at TECNM Celaya, while taking various courses and developing a wide range of applications.</p>
-          <p>During my career</p>
-          <p>I love to both build and refine projects. I am driven by challenging endeavors that require self-directed research and creative problem-solving. My passion lies in crafting engaging front-end designs, blending color, typography, and dynamic motion for unique user experiences.</p>
-          <p>Now</p>
-          <p>Throughout my journey, I have worked on everything from innovative web designs to complex applications, with a focus on creating elegant, efficient solutions and delivering captivating user interfaces.</p>
+          <p>I am a <b>20-year-old</b> <b>developer</b>, <b>designer</b>, and <b>problem-solver</b> with over <b>2 years of experience</b> building <b>applications</b>. Currently, I'm studying at <b>TECNM Celaya</b>, taking various <b>courses</b>, and creating a wide range of <b>web applications</b>.</p>
+      
+          <p>Throughout my career, I’ve worked on everything from <b>innovative web designs</b> to <b>complex applications</b>, always striving for <b>elegant</b>, <b>efficient solutions</b>, and delivering captivating <b>user interfaces</b>.</p>
+      
+          <p>My passion lies in <b>crafting dynamic</b> and <b>engaging front-end designs</b> that combine <b>color</b>, <b>typography</b>, and <b>motion</b> to create <b>unique</b> and <b>memorable user experiences</b>.</p>
         </article>
       </section>
 
