--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -114,7 +114,7 @@ const stack = [
               View my projects
             </a>
             <a href='/work' class='py-2 px-4 truncate rounded text-xs md:text-sm lg:text-base border border-black/25 dark:border-white/25 hover:bg-black/5 hover:dark:bg-white/15 blend'>
-              View my work
+              Work and certificates
             </a>
           </div>
         </div>
