add new certificate to the work section

--- a/src/pages/work/index.astro
+++ b/src/pages/work/index.astro
@@ -11,6 +11,11 @@ const collection = await getCollection("work");
 // TODO: Move this to a separate file
 const Certificates = [
   {
+    title: "Astro: El framework para sitios web orientados al contenido",
+    url: "https://cursos.devtalles.com/certificates/o2m789nfgz",
+    logo: "https://import.cdn.thinkific.com/643563%2Fcustom_site_themes%2Fid%2FD0U6aCTrQPmlGzQXLZhe_DEVTALLES-LOGO-VARIANTES.png",
+  },
+  {
     title: "GIT+GitHub: Todo un sistema de control de versiones de cero",
     url: "https://cursos.devtalles.com/certificates/x62pu4pedm",
     logo: "https://import.cdn.thinkific.com/643563%2Fcustom_site_themes%2Fid%2FD0U6aCTrQPmlGzQXLZhe_DEVTALLES-LOGO-VARIANTES.png",
