add React icon to stack and update index page

--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -57,6 +57,10 @@ const stack = [
     text: "Github",
     icon: "github", 
     href: "https://github.com" 
+  },{
+    text: "React",
+    icon: "react",
+    href: "https://reactjs.org"
   }
 
 ]
