remove commented-out Blog section and RSS feed link from Header, consts, and index pages

--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -182,7 +182,7 @@ const stack = [
       </section>
 
       <!-- Blog Preview Section -->
-      <section class="animate">
+      <!-- <section class="animate">
         <div class="space-y-4">
           <div class="flex justify-between">
             <p class="font-semibold text-black dark:text-white">
@@ -202,7 +202,7 @@ const stack = [
             ))}
           </ul>
         </div>
-      </section>
+      </section> -->
 
 
 
