--- a/src/pages/work/index.astro
+++ b/src/pages/work/index.astro
@@ -11,6 +11,11 @@ const collection = await getCollection("work");
 // TODO: Move this to a separate file
 const Certificates = [
   {
+    title: "React: De cero a experto ( Hooks y MERN )",
+    url: "https://cursos.devtalles.com/certificates/beksnnc5mi",
+    logo: "https://import.cdn.thinkific.com/643563%2Fcustom_site_themes%2Fid%2FD0U6aCTrQPmlGzQXLZhe_DEVTALLES-LOGO-VARIANTES.png",
+  },
+  {
     title: "Astro: El framework para sitios web orientados al contenido",
     url: "https://cursos.devtalles.com/certificates/o2m789nfgz",
     logo: "https://import.cdn.thinkific.com/643563%2Fcustom_site_themes%2Fid%2FD0U6aCTrQPmlGzQXLZhe_DEVTALLES-LOGO-VARIANTES.png",
