--- a/src/pages/work/index.astro
+++ b/src/pages/work/index.astro
@@ -16,6 +16,11 @@ const Certificates = [
     logo: "https://import.cdn.thinkific.com/643563%2Fcustom_site_themes%2Fid%2FD0U6aCTrQPmlGzQXLZhe_DEVTALLES-LOGO-VARIANTES.png",
   },
   {
+    title: "Zustand: Gestor de estado para React",
+    url: "https://cursos.devtalles.com/certificates/kgagu4hzhb",
+    logo: "https://import.cdn.thinkific.com/643563%2Fcustom_site_themes%2Fid%2FD0U6aCTrQPmlGzQXLZhe_DEVTALLES-LOGO-VARIANTES.png",
+  },
+  {
     title: "Astro: El framework para sitios web orientados al contenido",
     url: "https://cursos.devtalles.com/certificates/o2m789nfgz",
     logo: "https://import.cdn.thinkific.com/643563%2Fcustom_site_themes%2Fid%2FD0U6aCTrQPmlGzQXLZhe_DEVTALLES-LOGO-VARIANTES.png",
