--- a/src/pages/work/index.astro
+++ b/src/pages/work/index.astro
@@ -21,6 +21,11 @@ const Certificates = [
     logo: "https://import.cdn.thinkific.com/643563%2Fcustom_site_themes%2Fid%2FD0U6aCTrQPmlGzQXLZhe_DEVTALLES-LOGO-VARIANTES.png",
   },
   {
+    title: "TanStack Query - Un poderoso gestor de estado asíncrono.",
+    url: "https://cursos.devtalles.com/certificates/zzhjlqqw6r",
+    logo: "https://import.cdn.thinkific.com/643563%2Fcustom_site_themes%2Fid%2FD0U6aCTrQPmlGzQXLZhe_DEVTALLES-LOGO-VARIANTES.png",
+  },
+  {
     title: "Astro: El framework para sitios web orientados al contenido",
     url: "https://cursos.devtalles.com/certificates/o2m789nfgz",
     logo: "https://import.cdn.thinkific.com/643563%2Fcustom_site_themes%2Fid%2FD0U6aCTrQPmlGzQXLZhe_DEVTALLES-LOGO-VARIANTES.png",
