add new OpenAI certification to work page

--- a/src/pages/work/index.astro
+++ b/src/pages/work/index.astro
@@ -56,6 +56,11 @@ const Certificates = [
     logo: "https://import.cdn.thinkific.com/643563%2Fcustom_site_themes%2Fid%2FD0U6aCTrQPmlGzQXLZhe_DEVTALLES-LOGO-VARIANTES.png",
   },
   {
+    title: "OpenAI: Ejercicios prácticos y asistentes con React + NestJS",
+    url: "https://cursos.devtalles.com/certificates/gxpbvtrmeo",
+    logo: "https://import.cdn.thinkific.com/643563%2Fcustom_site_themes%2Fid%2FD0U6aCTrQPmlGzQXLZhe_DEVTALLES-LOGO-VARIANTES.png",
+  },
+  {
     title: "Visual Studio Code: Mejora tu velocidad para codificar",
     url: "https://cursos.devtalles.com/certificates/jgdygum41r",
     logo: "https://import.cdn.thinkific.com/643563%2Fcustom_site_themes%2Fid%2FD0U6aCTrQPmlGzQXLZhe_DEVTALLES-LOGO-VARIANTES.png",
