--- a/src/pages/work/index.astro
+++ b/src/pages/work/index.astro
@@ -11,6 +11,11 @@ const collection = await getCollection("work");
 // TODO: Move this to a separate file
 const Certificates = [
   {
+    title: "Next.js: El framework de React para producción",
+    url: "https://cursos.devtalles.com/certificates/bnf8ht3men",
+    logo: "https://import.cdn.thinkific.com/643563%2Fcustom_site_themes%2Fid%2FD0U6aCTrQPmlGzQXLZhe_DEVTALLES-LOGO-VARIANTES.png",
+  },
+  {
     title: "React PRO: Lleva tus bases al siguiente nivel",
     url: "https://cursos.devtalles.com/certificates/es1w9lytur",
     logo: "https://import.cdn.thinkific.com/643563%2Fcustom_site_themes%2Fid%2FD0U6aCTrQPmlGzQXLZhe_DEVTALLES-LOGO-VARIANTES.png",
