Add new certificate: Shadcn/ui for accessible and customizable components

--- a/src/pages/work/index.astro
+++ b/src/pages/work/index.astro
@@ -26,6 +26,11 @@ const Certificates = [
     logo: "https://import.cdn.thinkific.com/643563%2Fcustom_site_themes%2Fid%2FD0U6aCTrQPmlGzQXLZhe_DEVTALLES-LOGO-VARIANTES.png",
   },
   {
+    title: "Shadcn/ui: Componentes accesibles y personalizables",
+    url: "https://cursos.devtalles.com/certificates/mekejpsgkm",
+    logo: "https://import.cdn.thinkific.com/643563%2Fcustom_site_themes%2Fid%2FD0U6aCTrQPmlGzQXLZhe_DEVTALLES-LOGO-VARIANTES.png",
+  },
+  {
     title: "Zustand: Gestor de estado para React",
     url: "https://cursos.devtalles.com/certificates/kgagu4hzhb",
     logo: "https://import.cdn.thinkific.com/643563%2Fcustom_site_themes%2Fid%2FD0U6aCTrQPmlGzQXLZhe_DEVTALLES-LOGO-VARIANTES.png",
