feat: Update site constants and add new technologies
- Updated the WORK page title to "Work and Certifications".
- Added a new technology "Socket.io" to the stack in the index page.
- Added a new certification for "React: Aplicaciones en tiempo real con Socket-io" in the work page.
- Improved formatting and consistency in the consts.ts file.

--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -66,6 +66,10 @@ const stack = [
     text: "React",
     icon: "react",
     href: "https://reactjs.org"
+  },{
+    text: "Socket.io",
+    icon: "socketio",
+    href: "https://socket.io"
   }
 
 ]
