--- a/src/pages/work/index.astro
+++ b/src/pages/work/index.astro
@@ -56,6 +56,11 @@ const Certificates = [
     logo: "https://import.cdn.thinkific.com/643563%2Fcustom_site_themes%2Fid%2FD0U6aCTrQPmlGzQXLZhe_DEVTALLES-LOGO-VARIANTES.png",
   },
   {
+    title: "React: Aplicaciones en tiempo real con Socket-io",
+    url: "https://cursos.devtalles.com/certificates/hhbvykumda",
+    logo: "https://import.cdn.thinkific.com/643563%2Fcustom_site_themes%2Fid%2FD0U6aCTrQPmlGzQXLZhe_DEVTALLES-LOGO-VARIANTES.png",
+  },
+  {
     title: "Principios SOLID y Clean Code",
     url: "https://cursos.devtalles.com/certificates/seycnl25tc",
     logo: "https://import.cdn.thinkific.com/643563%2Fcustom_site_themes%2Fid%2FD0U6aCTrQPmlGzQXLZhe_DEVTALLES-LOGO-VARIANTES.png",
