--- a/src/pages/work/index.astro
+++ b/src/pages/work/index.astro
@@ -147,7 +147,7 @@ function formatWorkDate(input: Date | string) {
         <div class="text-sm font-semibold">
           Click on the certificate to view it
         </div>
-        <ul class="grid grid-cols-1 md:grid-cols-2 lg:grid-cols-3 gap-4 mt-4">
+        <ul id="certificates" class="grid grid-cols-1 md:grid-cols-2 lg:grid-cols-3 gap-4 mt-4">
           {
             Certificates.map((certificate) => (
               <CertificateComponent
